--- a/package.json
+++ b/package.json
@@ -5,20 +5,21 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --config ./webpack.config.js --mode development"
+    "dev": "webpack serve --config ./webpack.config.js --mode development",
+    "build": "webpack serve --config ./webpack.config.js --mode production"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.11.4",
-    "@babel/plugin-transform-runtime": "^7.11.0",
-    "@babel/preset-env": "^7.11.0",
-    "@babel/runtime": "^7.11.2",
-    "@babel/runtime-corejs3": "^7.11.2",
-    "babel-loader": "^8.1.0",
-    "html-webpack-plugin": "^3.2.0",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
+    "@babel/core": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "awesome-typescript-loader": "^5.2.1",
+    "babel-loader": "^8.0.6",
+    "babel-polyfill": "^6.26.0",
+    "html-webpack-plugin": "^5.3.1",
+    "typescript": "^4.3.2",
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.10.1"
   }
 }
